--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "moment": "^2.17.1",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   }
 }
