--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
+    "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
+    "sequelize": "^3.30.1",
+    "sequelize-cli": "^2.5.1",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3"
   }
